Integration WebSocket temps reel (forum/chat/votes, cours, programmes) + correctifs
ForumService: emet message/post created/edited/deleted + post:voted (afterCommit), clientPostId/clientMessageId echo pour dedup

ProgramService: emet course:created, subscription added/removed, program:updated

CourseService: emet course edited/deleted ; fix liste programs mutable (UnsupportedOperationException sur updateCourse)

EstablishmentDTO: ajout programCodes (fix crash creation programme: .some sur undefined)

Dashboard: upsert idempotent (dedup echo WS a la creation programme/cours) + Éditer un cours préserve les sections (quiz/canaux/forums)